--- a/Frameworks/JitsiMeet.framework/assets/lang/main.json
+++ b/Frameworks/JitsiMeet.framework/assets/lang/main.json
@@ -761,7 +761,8 @@
         "toggleCamera": "Toggle camera",
         "videomute": "Start / Stop camera",
         "startvideoblur": "Blur my background",
-        "stopvideoblur": "Disable background blur"
+        "stopvideoblur": "Disable background blur",
+        "endSession": "End Session For All"
     },
     "transcribing": {
         "ccButtonTooltip": "Start / Stop subtitles",
