--- a/Frameworks/JitsiMeet.framework/assets/lang/main-ar.json
+++ b/Frameworks/JitsiMeet.framework/assets/lang/main-ar.json
@@ -617,7 +617,7 @@
             "shareRoom": "",
             "shareYourScreen": "شارك الشاشة",
             "shortcuts": "",
-            "show": "",
+            "show": "إظهار على خشبة المسرح",
             "speakerStats": "عرض / إخفاء إحصائيات المتحدّث",
             "tileView": "تقسيم عرض المشاركين",
             "toggleCamera": "تبديل الكاميرا",
@@ -639,7 +639,7 @@
         "enterFullScreen": "اعرض كامل الشاشة",
         "enterTileView": "أدخل وضع عرض المربعات",
         "exitFullScreen": "الخروج من عرض ملء الشاشة",
-        "exitTileView": "",
+        "exitTileView": "الخروج من عرض البلاط",
         "feedback": "",
         "hangup": "مغادرة",
         "help": "مساعدة",
