Added new framework

--- a/Frameworks/JitsiMeet.framework/assets/lang/main-ar.json
+++ b/Frameworks/JitsiMeet.framework/assets/lang/main-ar.json
@@ -212,7 +212,7 @@
         "muteEveryoneStartMuted": "من الآن فصاعدًا سيبدأ الجميع مكتومي الصوت",
         "muteParticipantBody": "",
         "muteParticipantButton": "كتم",
-        "muteParticipantDialog": "هل تريد بالتأكيد كتم هذا المشارك؟",
+        "muteParticipantDialog": "هل انت متأكد من كتم صوت هذا المشارك؟\nلن تتمكن من الرجوع عن وضعية الكتم لاحقاً\nالمشارك فقط يمكن له الغاء الكتم",
         "muteParticipantTitle": "أتريد كتم هذا المشارِك؟",
         "Ok": "موافق",
         "passwordLabel": "",
@@ -361,7 +361,7 @@
         "raiseHand": "ارفع أو اخفض يدك",
         "showSpeakerStats": "اعرض إحصائيات المتحدث",
         "toggleChat": "فتح أو إغلاق المحادثة",
-        "toggleFilmstrip": "",
+        "toggleFilmstrip": "إظهار أو إخفاء الصور المصغرة للفيديو",
         "toggleScreensharing": "التبديل بين الكاميرا ومشاركة الشاشة",
         "toggleShortcuts": "اظهار / اخفاء اختصارات لوحة المفاتيح",
         "videoMute": "شغّل أو عطّل الكاميرا",
@@ -448,7 +448,7 @@
         "muted": "",
         "mutedTitle": "",
         "mutedRemotelyTitle": "لقد تم كتم صوتك من قِبل {{participantDisplayName}}!",
-        "mutedRemotelyDescription": "",
+        "mutedRemotelyDescription": "يمكنك ايقاف الكتم عندما تريد التحدث. اعد الكتم عندما تنتهي من التحدث وذالك لتجنب الازعاج",
         "passwordRemovedRemotely": "",
         "passwordSetRemotely": "",
         "raisedHand": "يود {{name}} أخذ الكلمة.",
@@ -617,7 +617,7 @@
             "shareRoom": "",
             "shareYourScreen": "شارك الشاشة",
             "shortcuts": "",
-            "show": "إظهار على خشبة المسرح",
+            "show": "اظهر الفيديو بشكل مصغر",
             "speakerStats": "عرض / إخفاء إحصائيات المتحدّث",
             "tileView": "تقسيم عرض المشاركين",
             "toggleCamera": "تبديل الكاميرا",
@@ -639,7 +639,7 @@
         "enterFullScreen": "اعرض كامل الشاشة",
         "enterTileView": "أدخل وضع عرض المربعات",
         "exitFullScreen": "الخروج من عرض ملء الشاشة",
-        "exitTileView": "الخروج من عرض البلاط",
+        "exitTileView": "الخروح من وضعية المشاهدة",
         "feedback": "",
         "hangup": "مغادرة",
         "help": "مساعدة",
@@ -738,12 +738,12 @@
         "domute": "كتم",
         "domuteOthers": "اكتم صوت الآخرين",
         "flip": "",
-        "kick": "إزالة من استدعاء",
+        "kick": "احذف من المحادثة",
         "moderator": "مشرف",
         "mute": "تم كتم صوت المشارك",
-        "muted": "تم كتم صوت المشارك",
+        "muted": "صامت",
         "remoteControl": "",
-        "show": "",
+        "show": "اظهر الفيديو بشكل مصغر",
         "videomute": "تم ايقاف الكاميرا من قِبل المشارك"
     },
     "welcomepage": {
