--- a/Frameworks/JitsiMeet.framework/assets/lang/main-ar.json
+++ b/Frameworks/JitsiMeet.framework/assets/lang/main-ar.json
@@ -50,7 +50,7 @@
         "fieldPlaceHolder": "اكتب رسالتك هنا",
         "messagebox": "اكتب رسالة",
         "messageTo": "رسالة خاصة إلى {{recipient}}",
-        "noMessagesMessage": "لا يوجد رسائل في الاجتماع. ابدأ المحادثة من هنا",
+        "noMessagesMessage": "",
         "nickname": {
             "popover": "اختر اسما مستعارًا",
             "title": "ادخل اسمًا مستعارًا لاستخدام المحادثة"
@@ -187,7 +187,7 @@
         "kickParticipantButton": "اطرده",
         "kickParticipantDialog": "هل أنت متأكد من أنك تريد طرد هذا المشارِك؟",
         "kickParticipantTitle": "أتريد طرد هذا المشارك؟",
-        "kickTitle": "لقد تم اخراجك من الاتصال",
+        "kickTitle": "",
         "liveStreaming": "بث مباشر",
         "liveStreamingDisabledForGuestTooltip": "",
         "liveStreamingDisabledTooltip": "البث المباشر معطّل.",
@@ -211,8 +211,8 @@
         "muteEveryoneSelf": "أنت",
         "muteEveryoneStartMuted": "من الآن فصاعدًا سيبدأ الجميع مكتومي الصوت",
         "muteParticipantBody": "",
-        "muteParticipantButton": "كتم",
-        "muteParticipantDialog": "هل انت متأكد من كتم صوت هذا المشارك؟\nلن تتمكن من الرجوع عن وضعية الكتم لاحقاً\nالمشارك فقط يمكن له الغاء الكتم",
+        "muteParticipantButton": "اكتمه",
+        "muteParticipantDialog": "",
         "muteParticipantTitle": "أتريد كتم هذا المشارِك؟",
         "Ok": "موافق",
         "passwordLabel": "",
@@ -254,7 +254,7 @@
         "Share": "شارك",
         "shareVideoLinkError": "يرجى تقديم رابط يوتيوب صحيح.",
         "shareVideoTitle": "مشاركة فيديو",
-        "shareYourScreen": "شارك الشاشة",
+        "shareYourScreen": "",
         "shareYourScreenDisabled": "",
         "shareYourScreenDisabledForGuest": "",
         "startLiveStreaming": "ابدأ البث المباشر",
@@ -277,12 +277,7 @@
         "WaitForHostMsgWOk": "",
         "WaitingForHost": "",
         "Yes": "",
-        "yourEntireScreen": "",
-        "teacherWillLaunch": "سيبدأ المدرس قريباَ في البث",
-        "remainingSessionTime": "الوقت المتبقي لإنتهاء المكالمة {{time}}",
-        "sessionTerminatedByTeacher": "تم انهاء المكالمة من قِبل المدرس",
-        "sessionEnded": "انتهت المحاثة",
-        "sessionCancelled": "تم الغاء المكالمة "
+        "yourEntireScreen": ""
     },
     "dialOut": {
         "statusMessage": ""
@@ -351,8 +346,8 @@
         "supportMsg": "إذا استمر حدوث ذلك ، فتواصل مع"
     },
     "keyboardShortcuts": {
-        "focusLocal": "التركيز على الفيديو",
-        "focusRemote": "التركيز على فيديو مستخدم آخر",
+        "focusLocal": "",
+        "focusRemote": "",
         "fullScreen": "عرض أو الخروج من وضع ملء الشاشة",
         "keyboardShortcuts": "اختصارات لوحة المفاتيح",
         "localRecording": "",
@@ -361,9 +356,9 @@
         "raiseHand": "ارفع أو اخفض يدك",
         "showSpeakerStats": "اعرض إحصائيات المتحدث",
         "toggleChat": "فتح أو إغلاق المحادثة",
-        "toggleFilmstrip": "إظهار أو إخفاء الصور المصغرة للفيديو",
-        "toggleScreensharing": "التبديل بين الكاميرا ومشاركة الشاشة",
-        "toggleShortcuts": "اظهار / اخفاء اختصارات لوحة المفاتيح",
+        "toggleFilmstrip": "",
+        "toggleScreensharing": "",
+        "toggleShortcuts": "",
         "videoMute": "شغّل أو عطّل الكاميرا",
         "videoQuality": "إدارة جودة المكالمات"
     },
@@ -448,7 +443,7 @@
         "muted": "",
         "mutedTitle": "",
         "mutedRemotelyTitle": "لقد تم كتم صوتك من قِبل {{participantDisplayName}}!",
-        "mutedRemotelyDescription": "يمكنك ايقاف الكتم عندما تريد التحدث. اعد الكتم عندما تنتهي من التحدث وذالك لتجنب الازعاج",
+        "mutedRemotelyDescription": "",
         "passwordRemovedRemotely": "",
         "passwordSetRemotely": "",
         "raisedHand": "يود {{name}} أخذ الكلمة.",
@@ -457,7 +452,7 @@
         "startSilentDescription": "",
         "suboptimalBrowserWarning": "",
         "suboptimalExperienceTitle": "",
-        "unmute": "إعادة تشغيل امكانية التحدث",
+        "unmute": "",
         "newDeviceCameraTitle": "",
         "newDeviceAudioTitle": "",
         "newDeviceAction": ""
@@ -587,7 +582,7 @@
     "toolbar": {
         "accessibilityLabel": {
             "audioOnly": "",
-            "audioRoute": "اختر مصدر الصوت",
+            "audioRoute": "",
             "callQuality": "إدارة جودة الفيديو",
             "cc": "",
             "chat": "",
@@ -595,7 +590,7 @@
             "download": "قم بتنزيل تطبيقاتنا",
             "feedback": "",
             "fullScreen": "تبديل وضع الشاشة الكاملة",
-            "hangup": "مغادرة",
+            "hangup": "",
             "help": "مساعدة",
             "invite": "",
             "kick": "",
@@ -604,10 +599,10 @@
             "moreActions": "",
             "moreActionsMenu": "قائمة الإجراءات الإضافية",
             "moreOptions": "اعرض المزيد من الخيارات",
-            "mute": "ايقاف / تشغيل المايكروفون",
+            "mute": "",
             "muteEveryone": "اكتم صوت الجميع",
             "pip": "",
-            "privateMessage": "ارسل رسالة خاصة",
+            "privateMessage": "",
             "profile": "تحرير ملفك التعريفي",
             "raiseHand": "",
             "recording": "",
@@ -615,20 +610,20 @@
             "Settings": "إخفاء أو إظهار قائمة الإعدادات",
             "sharedvideo": "",
             "shareRoom": "",
-            "shareYourScreen": "شارك الشاشة",
+            "shareYourScreen": "",
             "shortcuts": "",
-            "show": "اظهر الفيديو بشكل مصغر",
+            "show": "",
             "speakerStats": "عرض / إخفاء إحصائيات المتحدّث",
-            "tileView": "تقسيم عرض المشاركين",
-            "toggleCamera": "تبديل الكاميرا",
+            "tileView": "",
+            "toggleCamera": "",
             "toggleFilmstrip": "",
-            "videomute": "بدء / ايقاف الكاميرا",
+            "videomute": "",
             "videoblur": ""
         },
         "addPeople": "",
-        "audioOnlyOff": "ايقاف وضع التشغيل في حالة الانترنت البطيء",
-        "audioOnlyOn": "تفعيل وضع التشغيل في حالة الانترنت البطيء",
-        "audioRoute": "اختر مصدر الصوت",
+        "audioOnlyOff": "",
+        "audioOnlyOn": "",
+        "audioRoute": "",
         "authenticate": "",
         "callQuality": "إدارة جودة الفيديو",
         "chat": "فتح / إغلاق المحادثة",
@@ -639,17 +634,17 @@
         "enterFullScreen": "اعرض كامل الشاشة",
         "enterTileView": "أدخل وضع عرض المربعات",
         "exitFullScreen": "الخروج من عرض ملء الشاشة",
-        "exitTileView": "الخروح من وضعية المشاهدة",
+        "exitTileView": "",
         "feedback": "",
-        "hangup": "مغادرة",
+        "hangup": "",
         "help": "مساعدة",
         "invite": "",
         "login": "",
         "logout": "الخروج",
-        "lowerYourHand": "انزل يدك",
+        "lowerYourHand": "",
         "moreActions": "المزيد من الإجراءات",
         "moreOptions": "خيارات أخرى",
-        "mute": "كتم / تشغيل المايكروفون",
+        "mute": "",
         "muteEveryone": "اكتم الجميع",
         "noAudioSignalTitle": "",
         "noAudioSignalDesc": "",
@@ -660,7 +655,7 @@
         "noisyAudioInputDesc": "",
         "openChat": "",
         "pip": "",
-        "privateMessage": "ارسل رسالة خاصة",
+        "privateMessage": "",
         "profile": "تحرير ملفك التعريفي",
         "raiseHand": "ارفع / اخفض يدك",
         "raiseYourHand": "ارفع يدك",
@@ -674,13 +669,12 @@
         "stopScreenSharing": "",
         "stopSubtitles": "",
         "stopSharedVideo": "وقف فيديو يوتيوب",
-        "talkWhileMutedPopup": "هل تحاول التحدث؟ لقد تم كتم المايكروفون",
-        "tileViewToggle": "تقسيم عرض المشاركين",
-        "toggleCamera": "تبديل الكاميرا",
-        "videomute": "بدء / ايقاف الكاميرا",
+        "talkWhileMutedPopup": "",
+        "tileViewToggle": "",
+        "toggleCamera": "",
+        "videomute": "",
         "startvideoblur": "تعتيم خلفيتي",
-        "stopvideoblur": "إلغاء عتمة الخلفية",
-        "endSession": "هل انت متأكد من انهاء المحاثة للجميع؟"
+        "stopvideoblur": "إلغاء عتمة الخلفية"
     },
     "transcribing": {
         "ccButtonTooltip": "",
@@ -719,32 +713,32 @@
     "videoStatus": {
         "audioOnly": "",
         "audioOnlyExpanded": "",
-        "callQuality": "جودة الفيديو",
+        "callQuality": "",
         "hd": "",
-        "hdTooltip": "مشاهدة فيديو عالي الوضوح",
+        "hdTooltip": "",
         "highDefinition": "عالية الوضوح",
         "labelTooiltipNoVideo": "",
         "labelTooltipAudioOnly": "",
         "ld": "",
-        "ldTooltip": "مشاهدة فيديو منخفض الوضوح",
+        "ldTooltip": "",
         "lowDefinition": "جودة منخفضة",
         "onlyAudioAvailable": "",
         "onlyAudioSupported": "",
         "sd": "",
-        "sdTooltip": "مشاهدة فيديو معتدل الوضوح",
+        "sdTooltip": "",
         "standardDefinition": "جودة قياسية"
     },
     "videothumbnail": {
-        "domute": "كتم",
+        "domute": "",
         "domuteOthers": "اكتم صوت الآخرين",
         "flip": "",
-        "kick": "احذف من المحادثة",
+        "kick": "",
         "moderator": "مشرف",
-        "mute": "تم كتم صوت المشارك",
-        "muted": "صامت",
+        "mute": "",
+        "muted": "",
         "remoteControl": "",
-        "show": "اظهر الفيديو بشكل مصغر",
-        "videomute": "تم ايقاف الكاميرا من قِبل المشارك"
+        "show": "",
+        "videomute": ""
     },
     "welcomepage": {
         "accessibilityLabel": {
@@ -779,8 +773,7 @@
     },
     "lonelyMeetingExperience": {
         "button": "ادع أشخاصا آخرين",
-        "youAreAlone": "انت الشخص الوحيد في المحادثة",
-        "participantsIncall": "عدد المشاركين في هذه المكالمة : {{number}}"
+        "youAreAlone": "إنك المشترِك الوحيد في هذا الاجتماع"
     },
     "helpView": {
         "header": "مركز المساعدة"
