--- a/Frameworks/JitsiMeet.framework/assets/lang/main.json
+++ b/Frameworks/JitsiMeet.framework/assets/lang/main.json
@@ -306,12 +306,7 @@
         "WaitForHostMsgWOk": "The conference <b>{{room}}</b> has not yet started. If you are the host then please press Ok to authenticate. Otherwise, please wait for the host to arrive.",
         "WaitingForHost": "Waiting for the host ...",
         "Yes": "Yes",
-        "yourEntireScreen": "Your entire screen",
-        "teacherWillLaunch": "Teacher will soon launch the live",
-        "remainingSessionTime": "Session will end in {{time}}",
-        "sessionTerminatedByTeacher": "Session ended by Teacher",
-        "sessionEnded": "Session ended",
-        "sessionCancelled": "Session cancelled"
+        "yourEntireScreen": "Your entire screen"
     },
     "dialOut": {
         "statusMessage": "is now {{status}}"
@@ -766,8 +761,7 @@
         "toggleCamera": "Toggle camera",
         "videomute": "Start / Stop camera",
         "startvideoblur": "Blur my background",
-        "stopvideoblur": "Disable background blur",
-        "endSession": "Are you sure you want to end session for all ?"
+        "stopvideoblur": "Disable background blur"
     },
     "transcribing": {
         "ccButtonTooltip": "Start / Stop subtitles",
@@ -866,8 +860,7 @@
     },
     "lonelyMeetingExperience": {
         "button": "Invite others",
-        "youAreAlone": "You are the only one in the meeting",
-        "participantsIncall": "{{number}} participants in this call"
+        "youAreAlone": "You are the only one in the meeting"
     },
     "helpView": {
         "header": "Help center"
